WrongTry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-route4-service
  namespace: route4
  labels :
    app: route4
spec:
  selector:
    app: go-route4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
