WrongTry/ingress-defaul.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: route4
  name: ingress-go-route-default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: learning.kubernetes
    alb.ingress.kubernetes.io/group.order: '4'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: go-route4-service
                port:
                  number: 80
